# gen/http/openapi.yaml
@@ -56,6 +56,12 @@ paths:
                         $ref: '#/definitions/BadRequestError'
                         required:
                             - message
+                "404":
+                    description: Not Found response.
+                    schema:
+                        $ref: '#/definitions/NotFoundError'
+                        required:
+                            - message
                 "500":
                     description: Internal Server Error response.
                     schema:
@@ -191,6 +197,19 @@ definitions:
         description: Internal server error
         example:
             message: An internal server error occurred.
+        required:
+            - message
+    NotFoundError:
+        title: NotFoundError
+        type: object
+        properties:
+            message:
+                type: string
+                description: Error message
+                example: The requested resource was not found.
+        description: Not found
+        example:
+            message: The requested resource was not found.
         required:
             - message
     Organization:
