# gen/http/query_svc/server/encode_decode.go
@@ -265,6 +265,19 @@ func EncodeQueryOrgsError(encoder func(context.Context, http.ResponseWriter) goa
 			w.Header().Set("goa-error", res.GoaErrorName())
 			w.WriteHeader(http.StatusInternalServerError)
 			return enc.Encode(body)
+		case "NotFound":
+			var res *querysvc.NotFoundError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewQueryOrgsNotFoundResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusNotFound)
+			return enc.Encode(body)
 		case "ServiceUnavailable":
 			var res *querysvc.ServiceUnavailableError
 			errors.As(v, &res)
